--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,1 +1,81 @@
-*{padding:0;margin:0}* #imglist{display:block;position:fixed;left:0;top:0;width:100%;height:100%;overflow:hidden;z-index:1}* #imglist li{position:absolute;top:-70px;opacity:0;transition:opacity 1s ease-in}* #imglist li.opa-on{opacity:1}* .content{width:310px;margin:120px auto 0 auto;position:relative;z-index:10}* .content h1{font-size:30px;font-weight:700;text-shadow:0 1px 4px rgba(0,0,0,0.2);color:#fff;cursor:pointer}* .content h1.login-tit{float:left;margin-left:20px}* .content h1.register-tit{float:right;margin-right:25px}* .content .window{height:280px;overflow:hidden}* .content .window .login-list{transition:all .5s}* .content .window .login #login-req{height:21px}* .content .window .login input{width:270px;height:42px;background:rgba(45,45,45,0.15);border-radius:6px;border:1px solid rgba(255,255,255,0.15);box-shadow:0 2px 3px 0 rgba(0,0,0,0.1) inset;font-family:'PT Sans',Helvetica,Arial,sans-serif;font-size:14px;text-shadow:0 1px 2px rgba(0,0,0,0.1);-webkit-transition:all .2s;outline:0;color:#fff}* .content .window .login input::placeholder{color:#fff}* .content .window .login .remember-me{width:12px;height:12px;margin-top:10px}* .content .window .login .remember-title{color:#fff;font-size:14px}* .content .window .login button{cursor:pointer;width:300px;height:44px;margin-top:15px;padding:0;background:#ef4300;border-radius:6px;border:1px solid #ff730e;box-shadow:0 15px 30px 0 rgba(255,255,255,0.25) inset,0 2px 7px 0 rgba(0,0,0,0.2);font-family:'PT Sans',Helvetica,Arial,sans-serif;font-size:14px;font-weight:700;color:#fff;text-shadow:0 1px 2px rgba(0,0,0,0.1);-webkit-transition:all .2s}* .content .window .login button:hover{box-shadow:none}* .content .window .reg{margin-top:60px}* .content .window .reg #register-req{height:21px}* .content .window .reg input{width:270px;height:42px;margin-top:15px;padding:0 15px;background:rgba(45,45,45,0.15);border-radius:6px;border:1px solid rgba(255,255,255,0.15);box-shadow:0 2px 3px 0 rgba(0,0,0,0.1) inset;font-family:'PT Sans',Helvetica,Arial,sans-serif;font-size:14px;text-shadow:0 1px 2px rgba(0,0,0,0.1);-webkit-transition:all .2s;outline:0;color:#fff}* .content .window .reg input::placeholder{color:#fff}* .content .window .reg button{cursor:pointer;width:300px;height:44px;margin-top:25px;padding:0;background:#ef4300;border-radius:6px;border:1px solid #ff730e;box-shadow:0 15px 30px 0 rgba(255,255,255,0.25) inset,0 2px 7px 0 rgba(0,0,0,0.2);font-family:'PT Sans',Helvetica,Arial,sans-serif;font-size:14px;font-weight:700;color:#fff;text-shadow:0 1px 2px rgba(0,0,0,0.1);-webkit-transition:all .2s}* .content .window .reg button:hover{box-shadow:none}* .content .login input{width:270px;height:42px;margin-top:25px;padding:0 15px;background:rgba(45,45,45,0.15);border-radius:6px;border:1px solid rgba(255,255,255,0.15);box-shadow:0 2px 3px 0 rgba(0,0,0,0.1) inset;font-family:'PT Sans',Helvetica,Arial,sans-serif;font-size:14px;text-shadow:0 1px 2px rgba(0,0,0,0.1);-webkit-transition:all .2s;outline:0;color:#fff}* .content .login input::placeholder{color:#fff}* .content .login button{cursor:pointer;width:300px;height:44px;margin-top:25px;padding:0;background:#ef4300;border-radius:6px;border:1px solid #ff730e;box-shadow:0 15px 30px 0 rgba(255,255,255,0.25) inset,0 2px 7px 0 rgba(0,0,0,0.2);font-family:'PT Sans',Helvetica,Arial,sans-serif;font-size:14px;font-weight:700;color:#fff;text-shadow:0 1px 2px rgba(0,0,0,0.1);-webkit-transition:all .2s}* .content .login button:hover{box-shadow:none}* .content .reg input{width:270px;height:42px;margin-top:25px;padding:0 15px;background:rgba(45,45,45,0.15);border-radius:6px;border:1px solid rgba(255,255,255,0.15);box-shadow:0 2px 3px 0 rgba(0,0,0,0.1) inset;font-family:'PT Sans',Helvetica,Arial,sans-serif;font-size:14px;text-shadow:0 1px 2px rgba(0,0,0,0.1);-webkit-transition:all .2s;outline:0;color:#fff}* .content .reg input::placeholder{color:#fff}* .content .reg button{cursor:pointer;width:300px;height:44px;margin-top:25px;padding:0;background:#ef4300;border-radius:6px;border:1px solid #ff730e;box-shadow:0 15px 30px 0 rgba(255,255,255,0.25) inset,0 2px 7px 0 rgba(0,0,0,0.2);font-family:'PT Sans',Helvetica,Arial,sans-serif;font-size:14px;font-weight:700;color:#fff;text-shadow:0 1px 2px rgba(0,0,0,0.1);-webkit-transition:all .2s}* .content .reg button:hover{box-shadow:none}
+* {
+	margin: 0;
+	padding: 0;
+	font-size: 12px;
+	box-sizing: border-box;
+}
+
+html {
+	background: url(../img/login_bgx.gif);
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+	width: 100%;
+}
+
+.login_m {
+	margin: 10% auto 0;
+	width: 403px;
+	height: 375px;
+}
+
+.login_boder {
+	background: url(../img/login_m_bg.png) no-repeat;
+	width: 403px;
+	height: 302px;
+	padding: 28px 47px 20px 47px;
+}
+
+h2 {
+	color: #4f5d80;
+	text-transform: uppercase;
+	font-size: 12px;
+	font-weight: normal;
+	margin-bottom: 11px;
+}
+h1{
+	font-size: 25px;
+	margin: 0 auto;
+	width: 160px;
+}
+.login_logo{
+	margin-bottom: 20px;
+}
+
+.input {
+	width: 295px;
+	height: 36px;
+	border: 1px solid #cad2db;
+	padding: 0 5px;
+	border-radius: 5px;
+	border-radius: 5px;
+	line-height: 36px;
+	margin-bottom: 10px;
+	font-size: 14px;
+	color: #717171;
+	font-family: Arial;
+}
+
+.rember {
+	width: 13px;
+	height: 13px;
+}
+
+.rem_sub {
+	margin-top: 20px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.sub_button {
+	width: 122px;
+	height: 32px;
+	background: url(../img/site_bg.png) no-repeat -153px -850px;
+	border: none;
+	color: #FFF;
+	padding-bottom: 2px;
+	font-size: 14px;
+	font-weight: bold;
+	cursor: pointer;
+}
